--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<li><b>NOM: </b>Raúl Romero Cerrato</li>
 					<li><b>CURS: </b>Grau Superior en Desenvolipament d'Aplicacions Multiplataforma</li>
 					<li><b>EMAIL: </b>raulromero@paucasesnovescifp.cat</li>
-					<li><b>Currículum: </b><a href="Curriculum/curriculum.html">Currículum Raúl Romero</a></li>
+					<li><b>Currículum: </b><a href="https://raulromerocerrato.github.io/Curr-culum-Ra-l-Romero-/">Currículum Raúl Romero</a></li>
 			</footer>
 		</body>
 	</html>
