Edición index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 				</center>
 			</header>
 			<section>
-				<img src="images.jpeg" style="width: 22%">
-				<img src="Rayo_McQueen.webp" style="width: 22%">
+				<img src="jjj.jpg" style="width: 52%">
 			</section>
 			<footer>
 				<h4>Contacte</h4>
@@ -26,7 +25,7 @@
 					<li><b>NOM: </b>Raúl Romero Cerrato</li>
 					<li><b>CURS: </b>Grau Superior en Desenvolipament d'Aplicacions Multiplataforma</li>
 					<li><b>EMAIL: </b>raulromero@paucasesnovescifp.cat</li>
-					<li><b>Currículum: </b><a href="Curriculum/curriculum.html">Currículum Raúl Romero</a></li>
+					<li><b>Currículum: </b><a href="https://raulromerocerrato.github.io/Curr-culum-Ra-l-Romero-/">Currículum Raúl Romero</a></li>
 			</footer>
 		</body>
 	</html>
