--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				</center>
 			</header>
 			<section>
-				<img src="jjj.jpg" style="width: 52%">
+				<img src="i/jjj.jpg" style="width: 52%">
 			</section>
 			<footer>
 				<h4>Contacte</h4>
