--- a/Unitat 1/Unitat1.html
+++ b/Unitat 1/Unitat1.html
@@ -9,7 +9,7 @@
 					Unitat 1: Anàlisi i interpretació de fragments de codi
 				</h1>
 				<nav>
-					<h2><a href='index.html'>Home</a></h2>
+					<h2><a href='Apunts/index.html'>Home</a></h2>
 				</nav>
 			</header>
 				<nav>
