He modificat la ruta per poder tornar enrere, a Unitat1, de tots els arxius de la Unitat 1

--- a/Unitat 1/Apartats/LesDades.html
+++ b/Unitat 1/Apartats/LesDades.html
@@ -9,7 +9,7 @@
 					Les Dades
 				</h1>
 				<div>
-					<h3><a href='/home/alumne/Documents/Llenguatge de Marques/ProjecteApunts/Unitat 1/Unitat1.html'>Unitat 1 |</a>&nbsp;<a href='EmmagatzematgeDades.html'> L'emmagatzematge de dades |</a>&nbsp;<a href='IntroduccioLM.html'> Introducció als llenguatges de marques |</a>&nbsp;<a href='ClassificacioLM.html'> Classificació dels llenguatges de marques</a></h3>
+					<h3><a href='../Unitat1.html'>Unitat 1 |</a>&nbsp;<a href='EmmagatzematgeDades.html'> L'emmagatzematge de dades |</a>&nbsp;<a href='IntroduccioLM.html'> Introducció als llenguatges de marques |</a>&nbsp;<a href='ClassificacioLM.html'> Classificació dels llenguatges de marques</a></h3>
 				</div>
 			</header>
 				<nav>
