--- a/Unitat 1/Apartats/ClassificacioLM.html
+++ b/Unitat 1/Apartats/ClassificacioLM.html
@@ -9,7 +9,7 @@
 					<span style="#F54927">Classficiació dels llenguatges de marques</span>
 				</h1>
 				<div>
-					<h3><a href='/home/alumne/Documents/Llenguatge de Marques/ProjecteApunts/Unitat 1/Unitat1.html'>Unitat 1 |</a>&nbsp;<a href='LesDades.html'> Les dades |</a>&nbsp;<a href='EmmagatzematgeDades.html'> L'emmagatzematge de dades |</a>&nbsp;<a href='IntroduccioLM.html'> Introducció als llenguatges de marques</a></h3>
+					<h3><a href='..Unitat1.html'>Unitat 1 |</a>&nbsp;<a href='LesDades.html'> Les dades |</a>&nbsp;<a href='EmmagatzematgeDades.html'> L'emmagatzematge de dades |</a>&nbsp;<a href='IntroduccioLM.html'> Introducció als llenguatges de marques</a></h3>
 				</div>
 			</header>
 				<nav>
